<resources>
    <string name="app_name">TipTracker</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must be at least 8 characters, contain at least one uppercase letter, and contain at least one number.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>

    <!-- Strings related to login. &#823; represents an ellipse (...) -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register</string>
    <string name="login_failed">Login Failed</string>
    <string name="logging_in">Logging you in&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="email_pass">E-Mail/Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="connection_failed">Could not connect.</string>
    <string name="google_sign_in_failed">Google sign in failed.</string>
    <string name="connecting">Connecting&#8230;</string>

    <!-- Strings related to registration -->
    <string name="register_failed">Registration was unsuccessful.</string>
    <string name="register_success">Registration was successful.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_passwords_dont_match">Passwords do not match.</string>
    <string name="creating_account">Creating account&#8230;</string>

    <!-- Strings related to Home -->
    <string name="current_budget">Current Budget: </string>
    <string name="manage_budget">Manage Budget</string>
    <string name="manage_paystubs">Manage Paystubs</string>
    <string name="manage_goal">Manage Budget Goal</string>
    <string name="logout">Logout</string>

    <!-- Strings related to managing budget-->
    <string name="set_budget">Current Budget Goal</string>
    <string name="change_budget">Change Budget</string>
    <string name="view_graph_reports">View Graph Reports</string>
    <string name="budget_goal_progress">View Budget Goal Progress</string>
    <string name="income_progress">View Income Progress</string>
    <string name="expense_progress">View Expense Progress</string>
    <string name="add_repeated">Add Repeated Income/Expense</string>
    <string name="add_repeated_dialog">Add Repeated Item</string>
    <string name="repeated_items">Repeated Items</string>

    <!-- Graph names -->
    <string name="budget_graph">Budget Goal Progress</string>
    <string name="income_graph">Income Progress</string>
    <string name="expense_graph">Expense Progress</string>

    <!-- Strings related to Paystubs -->
    <string name="paystubs">Paystubs</string>
    <string name="your_paystubs">Your Paystubs</string>
    <string name="add_paystub">Add a PayStub Manually</string>
    <string name="view_paystub">View All Your PayStubs</string>
    <string name="paystub_amount">Enter an Amount</string>
    <string name="paystub_submit">Submit</string>
    <string name="paystub_desc">Enter a description</string>
    <string name="paystub_addtoIncome">Add to Income</string>

    <!-- Web Client ID for Google Sign In-->
    <string name="web_client_id">324564773792-92dncenkbrusdj1u9don48q6tq4amn0m.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to Budget Management -->
    <string name="add_item">Add another item</string>
    <string name="add_item_message1">You are about to add a new item to the </string>
    <string name="add_item_message2">category.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_category">Add new category</string>
    <string name="add_item_enter_fields">Please fill out all the fields.</string>
    <string name="category">Category</string>
    <string name="category_added">Category was successfully added</string>
    <string name="category_exists">Category already exists.</string>
    <string name="income_added">Income was successfully added</string>
    <string name="no_blank">No fields can be left blank.</string>
    <string name="expense_added">Expense was successfully added</string>
    <string name="total">Total: $</string>
    <string name="pie_chart_label">Amounts by category</string>
    <string name="pie_chart_select_slice">Select a Pie Chart Slice</string>
    <string name="retrieving">Retrieving...</string>


    <!-- Strings for manually adding item dialog-->
    <string name="item_name">Name</string>
    <string name="enter_budget_goal">Enter new budget goal</string>
    <string name="title_activity_bg2_fragment">BG2Fragment</string>

    <!--Strings for removing items-->
    <string name="confirm_removal_header">Confirm Removal</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm">Confirm</string>

    <!--Strings for permissions -->
    <string name="request_location_accepted">You have granted permission to location.</string>
    <string name="request_location_declined">You have declined permission to location.</string>
    <string name="request_storage_accepted">You have accpeted permission to write to storage.</string>
    <string name="request_storage_denied">You have declined permission to write to storage.</string>

    <string name="title_activity_maps">Map</string>
    <string name="upload_progress_text">Uploading...</string>
</resources>
