<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ronjc.tiptracker.GoalGraphFragment">

    <TextView
        android:id="@+id/viewGraph_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="10dp"
        android:text="@string/view_graph_reports"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:textSize="25sp" />

    <Button
        android:id="@+id/budget_goal_graph"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/budget_goal_progress"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/income_graph"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/income_progress"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/expense_graph"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_bg"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/expense_progress"
        android:textAllCaps="false" />
</LinearLayout>
