<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/metroTileColorPressed"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_category_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_category"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/metrotile"
        android:clickable="true"
        android:focusable="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_category_text_input"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textColorHint="@color/colorWhite"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/add_category_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorWhite" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_below="@+id/add_category_text_input"
            android:id="@+id/add_category_dialog_button"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_bg"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/add"
            android:textAllCaps="false"/>

    </RelativeLayout>


</LinearLayout>