<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/metroTileColorPressed"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/confirm_removal_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/confirm_removal_header"
        android:textColor="@color/colorWhite"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/metrotile"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/confirm_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/are_you_sure"
            android:textColor="@color/colorWhite"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_below="@+id/confirm_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:id="@+id/confirm_removal_button"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_bg"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/confirm"
                android:textAllCaps="false"/>

            <Button
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/cancel_removal_button"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_bg"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/cancel"
                android:textAllCaps="false"/>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>